Fix visibility of hamburger menu icon on mobile

--- a/styles.css
+++ b/styles.css
@@ -232,6 +232,7 @@ hr {
 }
 .topnav i {
     font-size: 16px;
+    color:#ffffff;
 }
 .topnav .fas.fa-caret-down {
     color:#ffffff;
